--- a/css/templates.css
+++ b/css/templates.css
@@ -2,28 +2,76 @@
   height: 2px;
   width: 100%;
   background-color: gray;
+  margin-top: 1rem;
 }
 
 .book-container {
   margin-left: auto;
   margin-right: auto;
-  background-color: aquamarine;
   width: 100%;
-  /* height: 220px; */
-  padding: 1rem 0;
+  margin: 1rem 0;
 }
 
 .bookBox {
-  width: 80%;
+  width: 100%;
   margin: auto; 
-  height: 150px;   
+  height: 250px;   
   background-color: blueviolet;                                                
 }
 
-.commentBox {
-  width: 80%;
+/* COMMENT CONTAINER */
+
+.commentContainer {
+  width: 100%;
   margin: auto;
-  height: 75px;
-  background-color: brown;
-  border: 2px solid black;
+  margin-bottom: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.commentBoxUpperPart {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.commentBoxLowerPart {
+  width: 90%;
+  max-height: 300px;
+  overflow: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+  
+}
+
+.commentContent {
+padding: 1.5rem 1rem;
+border: 1px solid rgba(0, 0, 0, 0.1);
+display: flex;
+flex-direction: column;
+gap: 1rem;
+margin-top: 1rem;
+border-radius: 0.5rem;
+box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.commentInputArea {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0;
+}
+
+.input-name {
+  padding: 0.25rem 0.5rem;  
+}
+.input-comment {
+  padding: 0.25rem 0.5rem;
 }
