--- a/css/templates.css
+++ b/css/templates.css
@@ -24,7 +24,6 @@
 .commentContainer {
   width: 100%;
   margin: auto;
-  margin-bottom: 0.25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,6 +36,8 @@
   align-items: center;
   gap: 1rem;
   justify-content: space-between;
+  border-top: 2px solid gray;
+  padding: 2rem 0;
 }
 
 .commentBoxLowerPart {
@@ -47,7 +48,7 @@
   padding-right: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
-  
+
 }
 
 .commentContent {
@@ -66,12 +67,26 @@ box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
   width: 60%;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 0;
+  gap: 0.5rem;
 }
 
 .input-name {
-  padding: 0.25rem 0.5rem;  
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  outline: none;  
+}
+.input-name::placeholder {
+  font-style: italic;
+  color: gray;
 }
 .input-comment {
-  padding: 0.25rem 0.5rem;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  outline: none;
+}
+.input-comment::placeholder {
+  font-style: italic;
+  color: gray;  
 }
