--- a/css/templates.css
+++ b/css/templates.css
@@ -2,21 +2,99 @@
   height: 2px;
   width: 100%;
   background-color: gray;
-  margin-top: 1rem;
 }
 
 .book-container {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  margin: 1rem 0;
 }
 
+/* BOOK BOX */
+
 .bookBox {
+  position: relative;
+  display: flex;
+  padding: 2rem 0;
   width: 100%;
-  margin: auto; 
-  height: 250px;   
-  background-color: blueviolet;                                                
+  margin: auto;
+  height: 320px;
+  user-select: none;
+}
+.heartBox {
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
+  cursor: pointer;
+}
+.bookBox:hover .bookImageBox {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+.bookImageBox {
+  height: 100%;
+  width: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.1s ease-in-out;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+}
+.bookImage {
+  height: 230px;
+  width: 160px;
+  object-fit: cover;
+}
+
+.book-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  flex: 1;
+  padding-left: 2rem;
+}
+
+.regText {
+  font-size: 1rem;
+  padding: 0.2rem 0;
+}
+.bookTitle {
+  margin-bottom: 0.5rem;
+}
+.bookPrice {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-top: 0.5rem;
+}
+.bookLikes {
+  font-size: 0.85rem;
+}
+.bookToComment {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 200px;
+  margin-top: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.356);
+  border-radius: 0.5rem;
+  user-select: none;
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+.bookToComment:hover {
+  background-color: rgba(128, 128, 128, 0.15);
+}
+.commentArrow {
+  transform: rotate(-45deg);
+  height: 1rem;
+}
+.commentArrowRotate {
+  transform: rotate(45deg);
+}
+.commentBackColorGray {
+  background-color: rgba(128, 128, 128, 0.15);
 }
 
 /* COMMENT CONTAINER */
@@ -30,36 +108,39 @@
 }
 
 .commentBoxUpperPart {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
   justify-content: space-between;
-  border-top: 2px solid gray;
+  border-top: 2px solid rgba(128, 128, 128, 0.15);
   padding: 2rem 0;
 }
 
 .commentBoxLowerPart {
-  width: 90%;
-  max-height: 300px;
+  width: 100%;
+  max-height: 320px;
   overflow: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding: 0 1rem;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
-
+  user-select: none;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  /* gap: 1rem; */
 }
 
 .commentContent {
-padding: 1.5rem 1rem;
-border: 1px solid rgba(0, 0, 0, 0.1);
-display: flex;
-flex-direction: column;
-gap: 1rem;
-margin-top: 1rem;
-border-radius: 0.5rem;
-box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
+  padding: 1.5rem 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .commentInputArea {
@@ -74,7 +155,8 @@ box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
   padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
   border: 1px solid rgba(0, 0, 0, 0.5);
-  outline: none;  
+  outline: none;
+  font-size: 1rem;
 }
 .input-name::placeholder {
   font-style: italic;
@@ -85,8 +167,22 @@ box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
   border: 1px solid rgba(0, 0, 0, 0.5);
   outline: none;
+  font-size: 1rem;
 }
 .input-comment::placeholder {
   font-style: italic;
-  color: gray;  
+  color: gray;
+}
+.comment-send-button {
+  padding: 0.25rem 0.5rem;
+  border: 1px solid rgba(0, 0, 0, 0.356);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  background-color: transparent;
+  font-size: 1rem;
+  transition: all 0.1s ease-in-out;
+  user-select: none;
+}
+.comment-send-button:hover {
+  background-color: rgba(128, 128, 128, 0.15);
 }
