--- a/css/standard.css
+++ b/css/standard.css
@@ -27,5 +27,5 @@ main .wrapper {
 }
 
 .commentBackColorGray {
-  background-color: rgba(128, 128, 128, 0.15);
+  background-color: rgb(236, 236, 236);
 }
