--- a/style.css
+++ b/style.css
@@ -45,15 +45,17 @@ header {
   border: 1px solid rgba(0, 0, 0, 0.356);
   border-radius: 0.5rem;
   cursor: pointer;
-  background-color: transparent;
   font-size: 1rem;
   transition: all 0.1s ease-in-out;
   user-select: none;
   width: 240px;
-  gap: 2.25rem;
 }
 .dropdown-filter-button:hover {
   background-color: rgba(128, 128, 128, 0.15);
+}
+#filterButtonText {
+  text-align: center;
+  flex: 1;
 }
 
 .dropdown-filter-list {
@@ -62,6 +64,7 @@ header {
   width: 240px;
   border-radius: 0.5rem;
   overflow: hidden;
+  z-index: 1000;
 }
 .dropdown-filter-list li {
   list-style-type: none;
@@ -78,14 +81,12 @@ header {
   border-top: 1px solid rgba(0, 0, 0, 0.356);
   border-bottom: 1px solid rgba(0, 0, 0, 0.356);
 }
-
 main {
   flex: 1;
   margin-top: 112px;
 }
-
 footer {
   height: 64px;
   background-color: blue;
+  color: white;
 }
-
