--- a/css/templates.css
+++ b/css/templates.css
@@ -103,7 +103,7 @@
   width: 100%;
   margin: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
 }
 
