--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ header {
 }
 .toTheTopButton:hover {
   transform: scale(1.1);
-
 }
 
 .dropdown-filter-box {
@@ -110,8 +109,7 @@ footer {
   color: white;
 }
 
-
-@media  screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   header {
     align-items: flex-start;
   }
@@ -132,9 +130,11 @@ footer {
   }
   .toTheTopButton {
     top: 32px;
+    width: 2rem;
+    height: 2rem;
   }
   .transform-right {
-    transform: translateX(-25px)!important;
+    transform: translateX(-8px) !important;
   }
   .upButton {
     width: 2rem;
@@ -167,5 +167,20 @@ footer {
   }
   .bookPrice {
     margin-bottom: 0.5rem;
+  }
+  .heartBox {
+    right: 12px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .dropdown-filter-box {
+    width: 220px;
+  }
+  .dropdown-filter-button {
+    width: 220px;
+  }
+  .dropdown-filter-list {
+    width: 220px;
   }
 }
